<resources>
    <string name="app_name">CKD</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login"> Login</string>
    <string name="createAnAccount">   Create an Account</string>
    <string name="google">Login using Google</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="gender">Gender</string>
    <string name="College">College</string>
    <string name="Year">Year</string>
    <string name="Signin">Signup</string>
    <string name="Notes">Notes</string>
    <string name="Books">Books</string>
    <string name="QuestionPaper">Question Paper</string>
    <string name="Certification">Certification</string>
    <string name="ToDo">To-Do List</string>
    <string name="Menu">Menu</string>
    <string name="Projects">Projects</string>
    <string name="Profile">Profile</string>
    <string name="MySubjects">My Subjects</string>
    <string name="MyNotes">My Notes</string>
    <string name="RateUs">Rate Us</string>
    <string name="Contribute">Contribute</string>
    <string name="Logout">Logout</string>
    <string name="close">close</string>
    <string name="save">save</string>
    <string name="add">ADD</string>
    <string name="add_task">Add Task</string>
    <string name="hi">Hi</string>
    <string name="done">Done</string>
    <string name="show">.pdf/new</string>
    <string name="plus">+</string>
    <string name="textviewhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh">TextViewhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</string>
    <string name="textview">TextView</string>
    <string name="year">Year</string>
    <string name="college">College</string>
    <string name="java">Java</string>
    <string name="OS">Oeprating System</string>
    <string name="Contributeinside">You can share your notes with us and can earn a reward just email us at "mailus@gamil.com".
        Make sure you have this things included in your mail </string>
    <string name="request_password_change">Request Password change</string>
    <string name="ckd">CKD</string>
    <string name="email">Email</string>
    <string name="no_file_present">NO FILE PRESENT</string>
    <string name="downloads">Downloads</string>


</resources>
