<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/browser_actions_title_color"
    tools:context=".home">

    <TextView
        android:id="@+id/todo"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="172dp"
        android:background="@color/cardview_dark_background"
        android:gravity="center"
        android:onClick="todo"
        android:text="@string/ToDo"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/Projects"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="88dp"
        android:background="@color/cardview_dark_background"
        android:gravity="center"
        android:onClick="pdfs"
        android:text="@string/Projects"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/Certifications"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="248dp"
        android:background="@color/cardview_dark_background"
        android:gravity="center"
        android:onClick="pdfs"
        android:text="@string/Certification"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/Paper"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="328dp"
        android:background="@color/cardview_dark_background"
        android:gravity="center"
        android:onClick="pdfs"
        android:text="@string/QuestionPaper"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/Books"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="400dp"
        android:background="@color/cardview_dark_background"
        android:gravity="center"
        android:onClick="pdfs"
        android:text="@string/Books"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/Notes"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="480dp"
        android:background="@color/cardview_dark_background"
        android:gravity="center"
        android:onClick="pdfs"
        android:text="@string/Notes"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="204dp"
        android:layout_height="118dp"
        android:fontFamily="@font/bungee_shade"
        android:text="CKD"
        android:textColor="#F80606"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/Menu"
        android:layout_width="73dp"
        android:layout_height="36dp"
        android:onClick="menu"
        android:text="@string/Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

</androidx.constraintlayout.widget.ConstraintLayout>