<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/browser_actions_title_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="204dp"
        android:layout_height="118dp"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/ckd"
        android:textColor="#F80606"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/createAnAccount"
        android:layout_width="250dp"
        android:layout_height="33dp"
        android:onClick="sign"
        android:text="@string/createAnAccount"
        android:textColor="#F8F8F8"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="400dp"
        android:layout_height="99dp"
        android:layout_alignParentBottom="true"


        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="220dp"
        android:background="@color/cardview_dark_background"
        android:gravity="center"
        android:onClick="log"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="4dp" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="113dp"
        android:layout_height="112dp"
        android:progressDrawable="@drawable/divider"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <TextView
        android:id="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="296dp"
        android:background="@color/cardview_dark_background"
        android:gravity="center"
        android:onClick="gsign"
        android:text="@string/google"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="4dp" />


</androidx.constraintlayout.widget.ConstraintLayout>